[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Day1.gd" type="Script" id=1]

[node name="Day1" type="Node2D"]
script = ExtResource( 1 )

[node name="Part1" type="Button" parent="."]
margin_left = 64.0
margin_top = 448.0
margin_right = 192.0
margin_bottom = 512.0
text = "Part 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Part1Result" type="LineEdit" parent="."]
margin_left = 64.0
margin_top = 520.0
margin_right = 192.0
margin_bottom = 576.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PuzzleInput" type="TextEdit" parent="."]
margin_left = 64.0
margin_top = 64.0
margin_right = 512.0
margin_bottom = 384.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_up" from="Part1" to="." method="_on_Part1_button_up"]
